--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                 A KITTEN’S LIFE
                             </div>
                             <div class="works-card__image">
-                                <img src="images/s4_2.png" alt="image">
+                                <img src="public/images/s4_2.png" alt="image">
                             </div>
                             <div class="works-card__subtitle">
                                 Photography
@@ -202,7 +202,7 @@
                                 APPLE’S LOST MAGIC
                             </div>
                             <div class="works-card__image">
-                                <img src="images/s4_4.png" alt="image">
+                                <img src="public/images/s4_4.png" alt="image">
                             </div>
                             <div class="works-card__subtitle">
                                 Photography
@@ -220,7 +220,7 @@
                                 100 YEARS PHOTOGRAPHY
                             </div>
                             <div class="works-card__image">
-                                <img src="images/s4_1.png" alt="image">
+                                <img src="public/images/s4_1.png" alt="image">
                             </div>
                             <div class="works-card__subtitle">
                                 Photography
@@ -236,7 +236,7 @@
                                 GROOVEMADE PRODUCTS FOR MAC
                             </div>
                             <div class="works-card__image">
-                                <img src="images/s4_3.png" alt="image">
+                                <img src="public/images/s4_3.png" alt="image">
                             </div>
                             <div class="works-card__subtitle">
                                 Photography
@@ -267,7 +267,7 @@
                     <div class="team-card">
                         <div class="team-card__wrapper">
                             <div class="team-card__image">
-                                <img src="images/s5_1.png" alt="">
+                                <img src="public/images/s5_1.png" alt="">
                             </div>
                             <div class="team-card__content">
                                 <div class="name">
@@ -287,7 +287,7 @@
                     <div class="team-card">
                         <div class="team-card__wrapper">
                             <div class="team-card__image">
-                                <img src="images/s5_2.png" alt="">
+                                <img src="public/images/s5_2.png" alt="">
                             </div>
                             <div class="team-card__content">
                                 <div class="name">
@@ -307,7 +307,7 @@
                     <div class="team-card">
                         <div class="team-card__wrapper">
                             <div class="team-card__image">
-                                <img src="images/s5_3.png" alt="">
+                                <img src="public/images/s5_3.png" alt="">
                             </div>
                             <div class="team-card__content">
                                 <div class="name">
